--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <title>Document</title>
     <script src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div id="results"></div>
+    <div id="score"></div>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+  </body>
 </html>
